--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.0
   permission_handler: ^12.0.1
+  intl: ^0.20.2
   
 
 dev_dependencies:
