--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   permission_handler: ^12.0.1
   intl: ^0.20.2
+  badges: ^3.1.2
   
 
 dev_dependencies:
